now use CURIE to resolve entities
